2006-06-01  John W. Eaton  <jwe@octave.org>

	* fntests.m (print_test_file_name, print_pass_fail): New functions.
	(runtestdir, runtestscript): Use them.  Print info for each file.
	(run_test_dir): Rename from runtestdir.  Change all uses.
	(run_test_script): Rename from runtestscript.  Change all uses.
	Handle page_screen_output as a fucntion instead of a built-in
	variable.

2006-05-04  John W. Eaton  <jwe@octave.org>

	* test_prefer.m: Adjust tests for eliminated built-in variables.

2006-04-29  John W. Eaton  <jwe@octave.org>

	* Makefile.in (check): Use run-octave script.

2006-04-28  John W. Eaton  <jwe@octave.org>

	* test_prefer.m: Adjust tests for new way of handling warning state.
	* build_sparse_tests.sh: Likewise.

2006-04-11  John W. Eaton  <jwe@octave.org>

	* test_system.m, test_struct.m, test_string.m, test_quad.m,
	test_number.m, test_nonlin.m, test_matrix.m, test_linalg.m,
	test_io.m, test_diffeq.m, test_arith.m: Update for new usage
	message format.

2006-04-03  David Bateman  <dbateman@free.fr>

	* test_number.m: Reverse sense of isscalar and isvector tests
          for recent changes.

2006-03-21  John W. Eaton  <jwe@octave.org>

	* test_system.m: Use cell arrays of character strings in fnmatch
	tests.

2006-03-16  John W. Eaton  <jwe@octave.org>

	* test_system.m: End all *pwent tests with a call to endpwent.
	End all *grent tests with a call to endgrent.

2006-03-14  John W. Eaton  <jwe@octave.org>

	* fntests.m: Prettier printing of output.
	* test_eval.m: Disable chatty tests.

2006-03-08  David Bateman  <dbateman@free.fr>

	* test_system.m: Fix recursive rmdir test for recent change.

2006-02-20  David Bateman  <dbateman@free.fr>

	* build_spase_tests.sh: Add tests for ldiv tests for rectangular
	diagonal, permuted diagonal, triangular and permuted triangular
	matrices.

2006-02-09  David Bateman  <dbateman@free.fr>

        * build_sparse_tests.sh: Add tests for sparse QR solvers.

2006-01-21  David Bateman  <dbateman@free.fr>
